<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/text_header_title_activity"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        style="@style/style_text_header_hint_type_currency"
        android:text="@string/text_header_hint_buy"
        app:layout_constraintBottom_toTopOf="@+id/type_currency_buy"
        app:layout_constraintStart_toStartOf="@+id/type_currency_buy" />

    <TextView
        android:id="@+id/type_currency_buy"
        style="@style/style_type_currency"
        android:text="USD"
        app:drawableEndCompat="@drawable/ic_arrow_drop_down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/edit_buy"
        style="@style/style_edit_value"
        android:hint="@string/text_edit_sell_buy"
        android:inputType="numberDecimal"
        android:imeOptions="actionGo"
        app:layout_constraintBottom_toBottomOf="@+id/type_currency_buy"
        app:layout_constraintEnd_toStartOf="@+id/ic_currency_buy"
        app:layout_constraintStart_toEndOf="@+id/type_currency_buy"
        app:layout_constraintTop_toTopOf="@+id/type_currency_buy" />

    <ImageView
        android:id="@+id/ic_currency_buy"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_usd"
        app:layout_constraintBottom_toBottomOf="@+id/edit_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_buy" />

    <TextView
        style="@style/style_text_header_hint_type_currency"
        android:text="@string/text_header_hint_sell"
        app:layout_constraintBottom_toTopOf="@+id/type_currency_sell"
        app:layout_constraintStart_toStartOf="@+id/type_currency_sell" />

    <TextView
        android:id="@+id/type_currency_sell"
        style="@style/style_type_currency"
        android:text="RUB"
        app:drawableEndCompat="@drawable/ic_arrow_drop_down"
        app:layout_constraintStart_toStartOf="@+id/type_currency_buy"
        app:layout_constraintTop_toBottomOf="@+id/type_currency_buy" />

    <EditText
        android:id="@+id/edit_sell"
        style="@style/style_edit_value"
        android:hint="@string/text_edit_sell_buy"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/type_currency_sell"
        app:layout_constraintEnd_toStartOf="@+id/ic_currency_sell"
        app:layout_constraintStart_toEndOf="@+id/type_currency_sell"
        app:layout_constraintTop_toTopOf="@+id/type_currency_sell" />

    <ImageView
        android:id="@+id/ic_currency_sell"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_rub"
        app:layout_constraintBottom_toBottomOf="@+id/edit_sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_sell" />

    <TextView
        android:id="@+id/erMessage_incorrectValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_erMessage_incorrectValue"
        android:textColor="@color/red"
        android:textSize="10sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_sell" />

    <Button
        android:id="@+id/btn_exchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_btn_exchange"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/erMessage_incorrectValue" />

    <TextView
        android:id="@+id/log_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_exchange" />

</androidx.constraintlayout.widget.ConstraintLayout>